web/css/menu.css
/* ... */
.subMenu ul li.menu-categories-list:last-child {
    border-right: 1px solid #F3F3F3;
}

.subMenu ul li.menu-categories-list a {
    text-transform: uppercase;
    padding: 20px 0;
    display: block;
    font-size: 13px;
}

.subMenu ul li.menu-categories-list:hover,.subMenu ul li.menu-categories-list.activeOption {
	border-bottom: 2px solid #a9d77b;
	background-color: #F9F9F9;
	font-weight: bold;
	color: #6b6b6b;
}

.subMenuFilter {
    float: right;
    padding: 20px 0;
}

.filter-container {
    width: 180px;
    border-right: 1px solid #F3F3F3;
    border-left: 1px solid #F3F3F3;
    font-size: 13px;
    padding: 0 15px;
    cursor: pointer;
}

.filter-container .arrow-down {
    position: relative;
    top: 25px;
    margin: 0 5px;
}

.filter-menu-label {
    width: 77px !important;
    margin: 0 auto;
    overflow: auto;
    display: block!important;
}

.filter-center {
    position: relative;
}

.filter-drop-down {
    background-color: white;
    width: 180px;
    position: absolute;
    top: 60px;
    right: -17px; 
    display: none;
    box-shadow: 0 0 6px #d0d0d0;
    -moz-box-shadow: 0 0 6px #d0d0d0;
    -webkit-box-shadow: 0 0 6px #d0d0d0;
}

.filter-drop-down input[type='checkbox'] {
    float: left;
    margin: 5px 0;
}

.filter-drop-down ul li {
	padding: 12px 0;
	overflow: hidden;
	text-transform: uppercase;
	font-size: 12px;
    font-weight: bold;
}

.filter-drop-down ul li:hover{
	background-color: #E8E8E8;
	color: #6b6b6b;
}
.filter-drop-down ul li div{
	padding: 0px 21px;
}
.filter-container:hover{
	border-bottom: 2px solid #a9d77b;
	background-color: #F9F9F9;
	box-sizing:border-box;
}

.listContainer{
	float: left;
	width: 100%;
}
.listItems{
	width: 32%;
	margin: 0 0 60px 2%;
	float: left;
    overflow: auto;
    height: auto;
}
.meal-image-wrapper{
    margin-bottom: 5px;
    position: relative;
}
.thumbnail{
	min-width: 100%;
    height: auto;
	border-radius: 5px;
	border: 1px solid #C7C7C7;
	cursor: pointer;
}
.meal-overlay {
  position: absolute;
  height: 99%;
  width: 100%;
  top: 0;
  left: 0;
  background-color: rgba(142, 198, 87, 0.65);
  display: none;
  border-radius: 4px;
  cursor: pointer;
}
p.upper-line {
  font-family: 'BrandonGrotesque-bold';
  font-size: 40px;
  color: #fff;
  text-align: center;
  position: absolute;
  top: 30%;
  width: 100%;
  left: 0;
}
p.lower-line {
  font-family: 'BrandonGrotesque-Medium';
  text-transform: uppercase;
  color: #fff;
  font-size: 18px;
  text-align: center;
  width: 100%;
  top: 55%;
  position: absolute;
  left: 0;
}
.listItemDetails{
	float: left;
	width: 100%;
	display: table;
	margin-bottom: 2px;
}
.listItemDetails span{
	display: table-cell;
	width: 100%;
}
.subMenuHeader{
	float: left;
	width: 100%;
	height: 400px;
	background: url(../images/header-image1.jpg) no-repeat;
	background-size: cover;
	position: relative;
}
.subMenuHeader span{
	position: absolute;
	bottom: 0;
	color: #fff;
	left: 94px;
}

.menuItemName{
	color: #9B9B9B;
  	text-transform: uppercase;
}
.menuItemDetails{
	vertical-align: middle;
    word-break: break-word;
    font-family: 'BrandonGrotesque-Regular';
    color: #6B6B6B;
    font-size: 14px;
    width: 100%;
    float: left;
    padding-bottom: 10px;
    text-transform: lowercase;
}
hr.mealList-hr {
  height: 1px;
  border: 0;
  width: 100%;
  background-color: #cdcdcd;
  float: left;
}
.itemCost{
	color: #B3B3B3;
	font-size: 24px;
	font-weight: normal;
}
.menu-pagination{
	float: right;
	padding-bottom: 10px;
}
.menu-loading-gif{
	width: 100%;
	overflow: hidden;
	text-align: center;
	/*display: none;*/
}
.subMenu .category-header{
	display: none;
    padding: 12px 0;
    overflow: hidden;
    text-transform: uppercase;
    font-family: 'BrandonGrotesque-bold';
    font-size: 13px;
}
.contentWrapper {
    float: left;
    width: 100%;
}

.subMenuHeader {
    float: left;
    width: 100%;
    height: 400px;
    background: url(../images/header-image1.jpg) no-repeat;
    background-size: cover;
    position: relative;
}

.subMenuHeader span {
    position: absolute;
    bottom: 0;
    color: #fff;
}

.addItemButton {
    height: 32px;
    min-width: 75px;
    font-size: 12px;
    line-height: 30px;
    padding: 0 0px;
    border-radius: 4px;
    float: right;
    margin-left: 20px;
}

.menuItemName {
    color: #6B6B6B;
    font-family: 'BrandonGrotesque-Medium';
    text-transform: uppercase;
    letter-spacing: 1.5px;
    margin-bottom: 0px;
    word-break: break-all;
    word-wrap: break-word;
    display: inline-block;
    overflow: hidden;
    width: 100%;
    /*white-space: nowrap;*/
    text-overflow: ellipsis;
    line-height: 20px;
}

.menuItemDetails {
    vertical-align: middle;
}

.itemCost {
    color: #6B6B6B;
    margin-bottom: 7px;
    font-size: 26px;
    font-weight: normal;
}
span.per-serving-text {
  font-family: 'BrandonGrotesque-Regular';
  color: #6b6b6b;
  font-size: 12px;
  vertical-align: middle;
  letter-spacing: 1px;
  padding-left: 5px;
}

.menu-pagination {
    float: right;
    padding-bottom: 10px;
}

.subMenu .category-header {
    display: none;
}
.subMenu {
    height: 60px;
}
.subMenu ul li.menu-categories-list a {
    padding: 20px 0;
}

.logo-mobile-container h3,.share-popup-wrapper{
    display: none;
}

.share-popup-wrapper .header{
    font-family: 'BrandonGrotesque-Bold';
    font-size: 20px;
    padding-left: 30px;
    padding-top: 6px;
}
.share-button-wrapper{
    padding: 20px 35px;
}
.share-popup-wrapper .popup-container{
    padding: 15px 5px;
    text-align: center;
}
.share-button{
    width: 100%;
    padding: 10px 0;
    margin-bottom: 10px;
    border: 1px hidden;
    color: #fff;
    border-radius: 3px;
    font-family: 'BrandonGrotesque-Bold';
    font-size: 20px;
}
.share-popup-wrapper .popup{
    height: 390px;
}
#facebook-share{
    background-color:#4E7AAD;
}
#twitter-share{
    background-color:#79B9EA;
}
#email-share{
    background-color:#6B6B6B;
}
/* ... */

